--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ path = "src/lib.rs"
 [dependencies]
 futures = "0.3.25"
 tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
+k8s-gateway-api = {version = "0.11.0", features = ["experimental"]}
 k8s-openapi = { version = "0.18.0", features = ["v1_25"], default-features = false }
 schemars = { version = "0.8.11", features = ["chrono"] }
 serde = { version = "1.0.148", features = ["derive"] }
@@ -37,6 +38,7 @@ assert-json-diff = "2.0.2"
 http = "0.2.8"
 hyper = "0.14.23"
 tower-test = "0.4.0"
+k8s-openapi = { version = "0.18.0", features = ["v1_25"]}
 
 [dependencies.kube]
 features = ["runtime", "client", "derive"]
