fix: Fixed apply error in Finalizer apply strategy

--- a/yaml/crd.yaml
+++ b/yaml/crd.yaml
@@ -1,23 +1,23 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: documents.kube.rs
+  name: bucketcerts.aruna-storage.org
 spec:
-  group: kube.rs
+  group: aruna-storage.org
   names:
     categories: []
-    kind: Document
-    plural: documents
+    kind: BucketCert
+    plural: bucketcerts
     shortNames:
-    - doc
-    singular: document
+    - bcert
+    singular: bucketcert
   scope: Namespaced
   versions:
   - additionalPrinterColumns: []
-    name: v1
+    name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Auto-generated derived type for DocumentSpec via `CustomResource`
+        description: Auto-generated derived type for BucketCertSpec via `CustomResource`
         properties:
           spec:
             description: |-
@@ -25,28 +25,26 @@ spec:
 
               This provides a hook for generating the CRD yaml (in crdgen.rs)
             properties:
-              content:
-                type: string
-              hide:
-                type: boolean
-              title:
+              bucket:
                 type: string
             required:
-            - content
-            - hide
-            - title
+            - bucket
             type: object
           status:
             description: The status object of `Document`
+            nullable: true
             properties:
-              hidden:
+              compacted:
+                type: boolean
+              created:
                 type: boolean
             required:
-            - hidden
+            - compacted
+            - created
             type: object
         required:
         - spec
-        title: Document
+        title: BucketCert
         type: object
     served: true
     storage: true
