--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ tonic = { version = "0.8.3", optional = true }
 thiserror = "1.0.37"
 anyhow = "1.0.69"
 log = "0.4.17"
+simple_logger = "4.1.0"
 
 [dev-dependencies]
 assert-json-diff = "2.0.2"
