--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ thiserror = "1.0.37"
 anyhow = "1.0.69"
 log = "0.4.17"
 simple_logger = "4.1.0"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 assert-json-diff = "2.0.2"
